--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 h1 {
+    font-weight: bold;
     color: rgb(0, 0, 0);
     text-align: left;
-}
+    font-family: Arial, Helvetica, sans-serif;
+    }
 h2 {
     color: rgb(0, 0, 0);
     text-align: left;
