more css corrections

--- a/style.css
+++ b/style.css
@@ -51,16 +51,16 @@ body {
 }
 
 
-#top-nav {
+.top-nav {
     background-color: rgb(200, 200, 200);
     padding: 10px;
     text-align: left;
     border-bottom: 1px solid rgb(0, 0, 0);
 }
-#top-nav a {
+.top-nav a {
     margin-right: 15px;
 }
-#top-nav a:hover {
+.top-nav a:hover {
     color: rgb(18, 0, 117);
     text-decoration: underline;
 }
