--- a/style.css
+++ b/style.css
@@ -28,10 +28,10 @@ nav a:hover {
     color: rgb(18, 0, 117);
     text-decoration: underline;
 }
-footer {
+#footer {
     color: rgb(0, 0, 0);
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Times New Roman', Times, serif, Helvetica, sans-serif;
     font-size: small;
     border-top: 1px solid rgb(0, 0, 0);
     margin-top: 20px;
@@ -51,16 +51,16 @@ body {
 }
 
 
-.top-nav {
+#top-nav {
     background-color: rgb(200, 200, 200);
     padding: 10px;
     text-align: left;
     border-bottom: 1px solid rgb(0, 0, 0);
 }
-.top-nav a {
+#top-nav a {
     margin-right: 15px;
 }
-.top-nav a:hover {
+#top-nav a:hover {
     color: rgb(18, 0, 117);
     text-decoration: underline;
 }
@@ -82,13 +82,8 @@ body {
 #skills-list ul {
     max-width: 300px;
 }
-#contact-info {
-    margin-top: 20px;
-}
-#contact-info p {
+#contact-info  {
     margin: 5px 0;
-}
-#contact-info a {
     color: rgb(0, 0, 0);
     text-decoration: none;
 }
