--- a/style.css
+++ b/style.css
@@ -1,9 +1,23 @@
+html {
+    scroll-behavior: smooth;
+} 
+body {
+    font-size: 16px;
+    line-height: 1.6;
+    color: rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
+    margin: 0;
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 h1 {
     font-weight: bold;
     color: rgb(0, 0, 0);
     text-align: left;
     font-family: Arial, Helvetica, sans-serif;
     }
+
 h2 {
     color: rgb(0, 0, 0);
     text-align: left;
