--- a/style.css
+++ b/style.css
@@ -10,29 +10,34 @@ body {
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
+main {
+    margin: 100px;
+}
+section {
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
 
 h1 {
+    font-size: 2.5em;
     font-weight: bold;
-    color: rgb(0, 0, 0);
     text-align: left;
     font-family: Arial, Helvetica, sans-serif;
     }
 
 h2 {
-    color: rgb(0, 0, 0);
+    font-size: 2em;
+    font-weight: bold;
     text-align: left;
     font-family: Arial, Helvetica, sans-serif;
 }
 p {
+    font-size: 1em;
     color: rgb(220, 0, 0);
     text-align: left;
     font-family: Arial, Helvetica, sans-serif;
 }
-ul {
-    color: rgb(0, 0, 0);
-    text-align: left;
-    font-family: Arial, Helvetica, sans-serif;
-}
+
 nav a {
     color: rgb(0, 0, 0);
     text-decoration: none;
@@ -42,7 +47,7 @@ nav a:hover {
     color: rgb(18, 0, 117);
     text-decoration: underline;
 }
-#footer {
+footer {
     color: rgb(0, 0, 0);
     text-align: center;
     font-family: 'Times New Roman', Times, serif, Helvetica, sans-serif;
@@ -51,17 +56,15 @@ nav a:hover {
     margin-top: 20px;
     padding-top: 10px;
 }  
-main {
-    margin: 100px;
-}
-section {
-    margin-bottom: 100px;
-}
-body {
-    background-color: rgb(255, 255, 255);
-    margin: 0;
-    padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
+
+
+.profile-pic {
+    float: right;
+    margin-left: 20px;
+    width: 150px;
+    height: auto;
+    border-radius: 50%;
+    border: 2px solid rgb(0, 0, 0);
 }
 
 
@@ -78,24 +81,18 @@ body {
     color: rgb(18, 0, 117);
     text-decoration: underline;
 }
-#profile-pic {
-    float: right;
-    margin-left: 20px;
-    width: 150px;
-    height: auto;
-    border-radius: 50%;
-    border: 2px solid rgb(0, 0, 0);
-}
+
 #skills-list {
     list-style-type: square;
     padding-left: 20px;
 }
-#skills-list li {
-    margin: 5px 0;
-}
 #skills-list ul {
     max-width: 300px;
 }
+#skills-list li {
+    margin: 5px 0;
+}
+
 #contact-info  {
     margin: 5px 0;
     color: rgb(0, 0, 0);
