--- a/style.css
+++ b/style.css
@@ -50,10 +50,10 @@ nav a:hover {
 footer {
     color: rgb(0, 0, 0);
     text-align: center;
-    font-family: 'Times New Roman', Times, serif, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: small;
     border-top: 1px solid rgb(0, 0, 0);
-    margin-top: 20px;
+    margin: 16px;
     padding-top: 10px;
 }  
 
