--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ h2 {
 }
 p {
     font-size: 1em;
-    color: rgb(220, 0, 0);
+    color: rgb(0, 0, 0);
     text-align: left;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -50,7 +50,7 @@ nav a:hover {
 footer {
     color: rgb(0, 0, 0);
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Times New Roman', Times, serif;
     font-size: small;
     border-top: 1px solid rgb(0, 0, 0);
     margin: 16px;
@@ -85,7 +85,6 @@ footer {
 
 #contact-info  {
     margin: 5px 0;
-    color: rgb(0, 0, 0);
     text-decoration: none;
 }
 #contact-info a:hover {
