--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     font-size: 16px;
     line-height: 1.6;
     color: rgb(0, 0, 0);
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(111, 228, 248);
     margin: 0;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
@@ -22,7 +22,7 @@ h1 {
     font-size: 2.5em;
     font-weight: bold;
     text-align: left;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
     }
 
 h2 {
@@ -57,16 +57,15 @@ footer {
     padding-top: 10px;
 }  
 
-
-.profile-pic {
-    float: right;
-    margin-left: 20px;
-    width: 150px;
-    height: auto;
-    border-radius: 50%;
-    border: 2px solid rgb(0, 0, 0);
+footer p  {
+    margin: 5px 0;
+    text-decoration: none;
 }
-
+footer p a:hover {
+    color: rgb(18, 0, 117);
+    text-decoration: underline;
+    background-color: salmon;
+}
 
 #top-nav {
     background-color: rgb(200, 200, 200);
@@ -82,12 +81,19 @@ footer {
     text-decoration: underline;
 }
 
+-- Responsive Design --
 
-#contact-info  {
-    margin: 5px 0;
-    text-decoration: none;
-}
-#contact-info a:hover {
-    color: rgb(18, 0, 117);
-    text-decoration: underline;
+@media (max-width: 600px) {
+    body {
+        font-size: 14px;
+    }
+    main {
+        margin: 20px;
+    }
+    h1 {
+        font-size: 1.8em;
+    }
+    h2 {
+        font-size: 1.5em;
+    }
 }
