--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ h1 {
     font-size: 2.5em;
     font-weight: bold;
     text-align: left;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     }
 
 h2 {
