--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@ html {
 body {
     font-size: 16px;
     line-height: 1.6;
-    color: rgb(0, 0, 0);
     background-color: rgb(111, 228, 248);
     margin: 0;
     padding: 0;
@@ -16,6 +15,7 @@ main {
 section {
     margin-top: 50px;
     margin-bottom: 50px;
+    background-color: aliceblue;
 }
 
 h1 {
@@ -39,12 +39,12 @@ p {
 }
 
 nav a {
-    color: rgb(0, 0, 0);
+    color: rgb(204, 136, 0);
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
 }
 nav a:hover {
-    color: rgb(18, 0, 117);
+    color: rgb(192, 233, 255);
     text-decoration: underline;
 }
 footer {
