--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ main {
 section {
     margin-top: 50px;
     margin-bottom: 50px;
+    padding: 16px;
     background-color: aliceblue;
 }
 
@@ -62,13 +63,13 @@ footer p  {
     text-decoration: none;
 }
 footer p a:hover {
-    color: rgb(18, 0, 117);
+    color: rgb(50, 14, 255);
     text-decoration: underline;
     background-color: salmon;
 }
 
 #top-nav {
-    background-color: rgb(200, 200, 200);
+    background-color: #012c43;
     padding: 10px;
     text-align: left;
     border-bottom: 1px solid rgb(0, 0, 0);
