--- a/style.css
+++ b/style.css
@@ -10,12 +10,11 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 main {
-    margin: 100px;
+    margin: 24px;
 }
 section {
     margin-top: 50px;
     margin-bottom: 50px;
-    padding: 16px;
     background-color: aliceblue;
 }
 
@@ -80,6 +79,10 @@ footer p a:hover {
 #top-nav a:hover {
     color: rgb(18, 0, 117);
     text-decoration: underline;
+}
+
+.somepadding {
+    padding: 15px;
 }
 
 -- Responsive Design --
