--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     font-size: 16px;
     line-height: 1.6;
     background-color: rgb(225, 250, 255);
-    margin: 50;
+    margin: 75px;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -20,6 +20,12 @@ h1 {
 
 h2 {
     font-size: 2em;
+    font-weight: bold;
+    text-align: left;
+    font-family: Arial, Helvetica, sans-serif;
+}
+h3 {
+    font-size: 1.5em;
     font-weight: bold;
     text-align: left;
     font-family: Arial, Helvetica, sans-serif;
@@ -42,8 +48,8 @@ nav a:hover {
 }
 footer {
     color: rgb(0, 0, 0);
-    text-align: center;
-    border-top: 1px solid rgb(0, 0, 0);
+    text-align: justify;
+    border-top: 1px solid rgb(0, 0, 0, 0.5);
     margin: 16px;
     padding-top: 10px;
 }  
@@ -52,7 +58,6 @@ footer p  {
     font-family: cursive;
     font-size: 0.9em;
     margin: 4px;
-    text-decoration: none;
 }
 footer p a:hover {
     color: rgb(50, 14, 255);
@@ -61,9 +66,7 @@ footer p a:hover {
 }
 #backgroundchange {
     background-color: rgb(193, 182, 255);
-    padding: 10px;
     border: 1px solid rgb(0, 0, 0);
-    margin-bottom: 20px;
 }
 #top-nav {
     background-color: #012c43;
@@ -81,7 +84,6 @@ footer p a:hover {
 
 .somepadding {
     padding: 16px;
-    background-color: beige;
 }
 
 /* Responsive Design */
