--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 html {
     scroll-behavior: smooth;
+    font-size: 2.5em;
+    box-sizing: border-box;
 } 
 body {
-    font-size: 16px;
     line-height: 1.6;
     background-color: rgb(225, 250, 255);
     margin: 75px;
     padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 
@@ -65,8 +66,11 @@ footer p a:hover {
     background-color: salmon;
 }
 #backgroundchange {
-    background-color: rgb(193, 182, 255);
+    background-color: rgb(195, 251, 171);
     border: 1px solid rgb(0, 0, 0);
+    text-decoration: none;
+    padding: 16px;
+    border-radius: 8px;
 }
 #top-nav {
     background-color: #012c43;
