--- a/style.css
+++ b/style.css
@@ -28,6 +28,15 @@ h3 {
     text-align: left;
     font-family: Arial, Helvetica, sans-serif;
 }
+picture {
+    width: 40%;
+    height: auto;
+    border: 2px solid rgb(0, 0, 0);
+    border-radius: 8px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
 p {
     font-size: 1em;
     color: rgb(0, 0, 0);
