--- a/style.css
+++ b/style.css
@@ -7,15 +7,12 @@ body {
     padding: 0;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
-
-
 h1 {
     font-size: 2.5em;
     font-weight: bold;
     text-align: left;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    }
-
+}
 h2 {
     font-size: 2em;
     font-weight: bold;
@@ -32,10 +29,6 @@ picture {
     width: 40%;
     height: auto;
     border: 2px solid rgb(0, 0, 0);
-    border-radius: 8px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
 }
 p {
     font-size: 1em;
@@ -53,6 +46,7 @@ nav a:hover {
     color: rgb(192, 233, 255);
     text-decoration: underline;
 }
+
 footer {
     color: rgb(0, 0, 0);
     text-align: justify;
@@ -60,7 +54,6 @@ footer {
     margin: 16px;
     padding-top: 10px;
 }  
-
 footer p  {
     font-family: cursive;
     font-size: 1em;
@@ -71,6 +64,7 @@ footer p a:hover {
     text-decoration: underline;
     background-color: salmon;
 }
+/* id styling*/
 #backgroundchange {
     background-color: rgb(195, 251, 171);
     border: 1px solid rgb(0, 0, 0);
@@ -79,10 +73,15 @@ footer p a:hover {
     border-radius: 8px;
 }
 #top-nav {
-    background-color: #012c43;
+    background-color: #005582;
     padding: 10px;
     text-align: left;
     border-bottom: 1px solid rgb(0, 0, 0);
+    margin-bottom: 20px;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 #top-nav a {
     margin-right: 15px;
