--- a/style.css
+++ b/style.css
@@ -99,10 +99,10 @@ footer p a:hover {
     border-right: 1px solid rgb(0, 0, 0);
     border-top: 1px solid rgb(0, 0, 0);
     border-bottom: 1px solid rgb(0, 0, 0);
-    margin: 8px;
-    position: sticky;
-    top: 100px;
+    margin-right: 8px;
+    width: 150px;
 }
+
 #side-nav a {
     display: block;
     margin-bottom: 10px;
