--- a/style.css
+++ b/style.css
@@ -97,12 +97,13 @@ footer p a:hover {
     padding: 10px;
     text-align: left;
     border-right: 1px solid rgb(0, 0, 0);
-    border-top: 1px solid rgb(0, 0, 0);
-    border-bottom: 1px solid rgb(0, 0, 0);
-    margin-right: 8px;
     width: 150px;
 }
-
+#side-nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
 #side-nav a {
     display: block;
     margin-bottom: 10px;
