--- a/style.css
+++ b/style.css
@@ -26,7 +26,8 @@ h3 {
 }
 main {
     margin-top: 80px;
-    margin-right: 220px;
+    margin-left: 220px;]
+    margin-right: 20px;
     padding: 8px;
     background: rgb(171, 251, 248); 
 }
