--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ h3 {
 }
 main {
     margin-top: 80px;
-    margin-left: 220px;]
+    margin-left: 220px;
     margin-right: 20px;
     padding: 8px;
     background: rgb(171, 251, 248); 
@@ -128,7 +128,7 @@ footer p a:hover {
 
 /* Side Navigation Bar */
 #side-nav {
-    top: 60px;
+    top: 80px;
     left: 0;
     background:linear-gradient(to bottom, #b3d9ff, #0059b3);
     overflow-y: auto;
