--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@ footer {
     text-align: center;
     border-top: 2px solid rgb(0, 0, 0, 0.5);
     margin-top: 16px;
+    margin-left: 220px;
     padding: 8px;
     background: lightblue;
 }  
