--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ footer p a:hover {
 }
 #top-nav ul li a {
     color: rgb(255, 255, 255);
-    text-decoration: none;
+    text-decoration: solid;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     transition: color 0.3s ease;
