--- a/style.css
+++ b/style.css
@@ -159,7 +159,14 @@ footer p a:hover {
     background: rgb(44, 90, 255);
     color: white;
 }
-
+#quotefooter {
+    text-align: center;
+    border-top: 2px solid rgb(0, 0, 0, 0.5);
+    margin-top: 16px;
+    margin-left: auto;
+    padding: 8px;
+    background: lightblue;
+}  
 
 /* class styling */
 .somepadding {
