--- a/jquery-intro/js.css
+++ b/jquery-intro/js.css
@@ -70,21 +70,21 @@ input[type='submit'] {
 	text-align: center;
 }
 #main {clear: left;}
-.Fall {
+.fall {
 	background-image: url(fall.png);
 	background-size: 100% 100%;
 	background-color: cornsilk;
 	text-align: center;
 }
-.Winter {
+.winter {
 	background-color: lightblue;
 	text-align: center;
 }
-.Summer {
+.summer {
 	background-color: #ff9;
 	text-align: center;
 }
-.Spring {
+.spring {
 	background-color: #afeeee;
 	text-align: center;
 }
