added outline for certain elements and fixed hiding....because i broke it

--- a/jquery-events/glossary.css
+++ b/jquery-events/glossary.css
@@ -108,3 +108,10 @@ input[type='submit'] {
 footer {
   clear: both;
 }
+
+.pic {
+	border-bottom: thin dashed darkgreen;
+}
+.imgdiv { 
+	position: absolute;
+}
