testing name validation

--- a/jquery-orderform/orderform.css
+++ b/jquery-orderform/orderform.css
@@ -56,7 +56,8 @@ table {
 }
 td, th {
 	padding: .25em 1em;
-	border: thin green dotted;}
+	border: thin green dotted;
+}
 td[id] {
 	text-align: right;
 }
