--- a/style.css
+++ b/style.css
@@ -32,27 +32,13 @@ main {
     background: rgb(171, 251, 248); 
 }
 picture {
-    width: auto;
+    width: 40%;
     height: auto;
     float: right;
     margin: 0 0 8px 8px;
-    box-shadow: rgb(0, 0, 0) 4px 4px 8px;
-}
-/*thumbnail class*/
-    .thumbnail {
-        width: 75px !important;
-        height: auto !important;
-        display: block !important;
+    border: 2px solid rgb(0, 0, 0);
+    border-radius: 8px;
     }
-    
-    /*span for thumbnail professional withbackground and border*/
-    #thumbspan {
-        display: inline-block !important;
-        background-color: rgb(200, 200, 200) !important;
-        padding: 2px !important;
-        border: 2px solid rgb(0, 0, 0) !important;
-    }
-    
 p {
     font-size: 1em;
     color: rgb(0, 0, 0);
@@ -261,7 +247,14 @@ footer p a:hover {
         margin-right: 20px !important;
         margin-top: 60px !important;
     }
-    
+    /*thumbnail class*/
+    .thumbnail {
+        width: 100% !important;
+        height: auto !important;
+        float: none !important;
+        margin: 0 auto 8px auto !important;
+        display: block !important;
+    }
     /* Adjust footer */
     footer {
         margin-left: 0 !important;
